--- a/src/app/pages/certificados-form/certificados-form.component.html
+++ b/src/app/pages/certificados-form/certificados-form.component.html
@@ -53,6 +53,7 @@
 
       </div>
       <app-secondary-button
+      (click)="adicionarAtividade()"
       [disabled]="atividade.length == 0"
       textoBotao="Adicionar"
       phClass="ph ph-plus"
@@ -64,7 +65,7 @@
         @for (atividade of atividades; track $index) {
         <div class="item">
           <span class="item-text">{{ atividade }}</span>
-          <div class="remove-btn">
+          <div (click)="excluirAtividade($index)" class="remove-btn">
             <i class="ph-bold ph-x"></i>
           </div>
         </div>
