--- a/src/app/pages/certificados-form/certificados-form.component.html
+++ b/src/app/pages/certificados-form/certificados-form.component.html
@@ -15,7 +15,7 @@
         >Nome</label
       >
       <input
-        [(ngModel)]="nome"
+        [(ngModel)]="certificado.nome"
         name="nome"
         #nomeRef="ngModel"
         maxlength="150"
@@ -34,47 +34,38 @@
     </div>
     <div class="mb-3 d-flex align-items-end custom-input-group">
       <div class="flex-grow-1 me-2">
-        <label
-          for="atividade"
-          class="form-label"
-          >Atividade</label
-        >
-        <input
-          #atividadeRef="ngModel"
-          name="atividade"
-          maxlength="50"
-          required
-          [(ngModel)]="atividade"
-          id="atividade"
-          type="text"
-          class="form-control custom-input"
-          placeholder="Atividade exercida"
-        />
-
+        <label for="atividade" class="form-label">Atividade</label>
+        <input #atividadeRef="ngModel" name="atividade" maxlength="50" required
+        [(ngModel)]="atividade" id="atividade" type="text" class="form-control
+        custom-input" placeholder="Atividade exercida" />
       </div>
       <app-secondary-button
-      (click)="adicionarAtividade()"
-      [disabled]="atividade.length == 0"
-      textoBotao="Adicionar"
-      phClass="ph ph-plus"
+        (click)="adicionarAtividade()"
+        [disabled]="atividade.length == 0"
+        textoBotao="Adicionar"
+        phClass="ph ph-plus"
       ></app-secondary-button>
     </div>
     <div class="atividade-group">
       <label class="form-label">Lista de atividades</label>
       <div class="item-list w-100">
-        @for (atividade of atividades; track $index) {
+        @for (atividade of certificado.atividades; track $index) {
         <div class="item">
           <span class="item-text">{{ atividade }}</span>
           <div (click)="excluirAtividade($index)" class="remove-btn">
             <i class="ph-bold ph-x"></i>
           </div>
         </div>
-        @if ($index + 1 != atividades.length) {
+        @if ($index + 1 != certificado.atividades.length) {
         <hr />
         } }
       </div>
     </div>
 
-    <app-primary-button [disabled]="!formValido()" textoBotao="Gerar certificado"></app-primary-button>
+    <app-primary-button
+      (click)="(submit)"
+      [disabled]="!formValido()"
+      textoBotao="Gerar certificado"
+    ></app-primary-button>
   </div>
 </form>
