--- a/src/app/pages/certificado/certificado.component.html
+++ b/src/app/pages/certificado/certificado.component.html
@@ -7,12 +7,16 @@
       <p class="m-0">Voltar</p>
     </div>
     <app-secondary-button
+      (click)="downloadCertificado()"
       phClass="ph ph-download-simple"
       textoBotao="Download"
     ></app-secondary-button>
   </div>
   @if (certificado) {
-  <div class="certificado d-flex justify-content-center align-items-center">
+  <div
+    #certificadoContainer
+    class="certificado d-flex justify-content-center align-items-center"
+  >
     <img
       class="icone-medalha"
       src="certificate/certificate_ribbon.png"
@@ -29,17 +33,17 @@
           <h1>CERTIFICADO DE CONCLUSÃO</h1>
           <p>Este certificado comprova que</p>
         </div>
-        <p class="nome-aluno">{{certificado.nome}}</p>
+        <p class="nome-aluno">{{ certificado.nome }}</p>
         <div>
           <p class="lista-atividade-titulo">
             Concluiu com sucesso as seguintes atividades:
           </p>
           <p class="lista-atividade">
-           {{certificado.atividades.join(', ')}}
+            {{ certificado.atividades.join(", ") }}
           </p>
         </div>
       </div>
-      <p class="data-emissao">Emitido em {{certificado.dataEmissao}}</p>
+      <p class="data-emissao">Emitido em {{ certificado.dataEmissao }}</p>
     </div>
   </div>
   }
